Don't DCHECK that we didn't lose the GL context

We will lose GL contexts.

BUG=689272
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2679943004
Cr-Commit-Position: refs/heads/master@{#448786}

Former-commit-id: f1c951d183fe777019f31e16b55b22c280afb3d2